Fix playlist names overflowing in mobile AddToPlaylistMenu. (#918)

--- a/src/components/AddToPlaylistMenu/index.css
+++ b/src/components/AddToPlaylistMenu/index.css
@@ -3,6 +3,10 @@
   justify-content: space-between;
 }
 
+.AddToPlaylistMenu-playlistName {
+  width: 100%;
+}
+
 .AddToPlaylistMenu-smallIcon {
   flex-grow: 0;
 }
